--- a/docs/phen_framing.Rnw
+++ b/docs/phen_framing.Rnw
@@ -46,51 +46,113 @@
 rm(list=ls()) 
 options(stringsAsFactors = FALSE)
 require(brms,quietly = TRUE)
-load("..//analyses/cgseasonmods.Rda")
+require(tidybayes,quietly=TRUE)
+require(bayesplot,quietly=TRUE)
+require(tidyverse,quietly=TRUE)
+load("~/Documents/git/wildhellgarden/analyses/cgseasonmods.Rda")
 corrr<-round(cor.test(use.data$leafout,use.data$budset)[4]$estimate,2)
 corrr.low<-round(cor.test(use.data$leafout,use.data$budset)[9]$conf.int[1],2)
 corrr.high<-round(cor.test(use.data$leafout,use.data$budset)[9]$conf.int[2],2)
 
-sig.sp<-round(summary(mod.lo)[17]$random$spp[1],2)
-sig.sp.l<-round(summary(mod.lo)[17]$random$spp[3],2)
-sig.sp.h<-round(summary(mod.lo)[17]$random$spp[4],2)
-
-sig.yr<-round(summary(mod.lo)[17]$random$year[1],2)
-sig.yr.l<-round(summary(mod.lo)[17]$random$year[3],2)
-sig.yr.h<-round(summary(mod.lo)[17]$random$year[4],2)
-
-sig.pop<-round(summary(mod.lo)[17]$random$site[1],2)
-sig.pop.l<-round(summary(mod.lo)[17]$random$site[3],2)
-sig.pop.h<-round(summary(mod.lo)[17]$random$site[4],2)
-
-bs.sig.sp<-round(summary(mod.bs)[17]$random$spp[1],2)
-bs.sig.sp.l<-round(summary(mod.bs)[17]$random$spp[3],2)
-bs.sig.sp.h<-round(summary(mod.bs)[17]$random$spp[4],2)
 
 
-bs.sig.yr<-round(summary(mod.bs)[17]$random$year[1],2)
-bs.sig.yr.l<-round(summary(mod.bs)[17]$random$year[3],2)
-bs.sig.yr.h<-round(summary(mod.bs)[17]$random$year[4],2)
+sigma_draws <- tidy_draws(mod.lo, variables = "sigma")
 
-bs.sig.pop<-round(summary(mod.bs)[17]$random$site[1],2)
-bs.sig.pop.l<-round(summary(mod.bs)[17]$random$site[3],2)
-bs.sig.pop.h<-round(summary(mod.bs)[17]$random$site[4],2)
+spp_sigma <- sigma_draws %>%
+  mean_hdi(sd_spp__Intercept, .width = 0.95)
+sig.sp<-round(spp_sigma[1],2)
+sig.sp.l<-round(spp_sigma[2],2)
+sig.sp.h<-round(spp_sigma[3],2)
 
-gs.sig.sp<-round(summary(mod.pgs)[17]$random$spp[1],2)
-gs.sig.sp.l<-round(summary(mod.pgs)[17]$random$spp[3],2)
-gs.sig.sp.h<-round(summary(mod.pgs)[17]$random$spp[4],2)
+#sig.yr<-round(summary(mod.lo)[17]$random$year[1],2)
+#sig.yr.l<-round(summary(mod.lo)[17]$random$year[3],2)
+#sig.yr.h<-round(summary(mod.lo)[17]$random$year[4],2)
 
-
-gs.sig.yr<-round(summary(mod.pgs)[17]$random$year[1],2)
-gs.sig.yr.l<-round(summary(mod.pgs)[17]$random$year[3],2)
-gs.sig.yr.h<-round(summary(mod.pgs)[17]$random$year[4],2)
-
-gs.sig.pop<-round(summary(mod.pgs)[17]$random$site[1],2)
-gs.sig.pop.l<-round(summary(mod.pgs)[17]$random$site[3],2)
-gs.sig.pop.h<-round(summary(mod.pgs)[17]$random$site[4],2)
+yr_sigma <- sigma_draws %>%
+  mean_hdi(sd_year__Intercept, .width = 0.95)
+sig.yr<-round(yr_sigma[1],2)
+sig.yr.l<-round(yr_sigma[2],2)
+sig.yr.h<-round(yr_sigma[3],2)
 
 
+#sig.pop<-round(summary(mod.lo)[17]$random$site[1],2)
+#sig.pop.l<-round(summary(mod.lo)[17]$random$site[3],2)
+#sig.pop.h<-round(summary(mod.lo)[17]$random$site[4],2)
+
+pop_sigma <- sigma_draws %>%
+  mean_hdi(sd_site__Intercept, .width = 0.95)
+sig.pop<-round(pop_sigma[1,1],2)
+sig.pop.l<-round(pop_sigma[1,2],2)
+sig.pop.h<-round(pop_sigma[1,3],2)
+
+
+#bs.sig.sp<-round(summary(mod.bs)[17]$random$spp[1],2)
+#bs.sig.sp.l<-round(summary(mod.bs)[17]$random$spp[3],2)
+#bs.sig.sp.h<-round(summary(mod.bs)[17]$random$spp[4],2)
+sigma_draws_bs <- tidy_draws(mod.bs, variables = "sigma")
+
+spp_sigma_bs <- sigma_draws_bs %>%
+  mean_hdi(sd_spp__Intercept, .width = 0.95)
+bs.sig.sp<-round(spp_sigma_bs[1],2)
+bs.sig.sp.l<-round(spp_sigma_bs[2],2)
+bs.sig.sp.h<-round(spp_sigma_bs[3],2)
+
+yr_sigma_bs <- sigma_draws_bs %>%
+  mean_hdi(sd_year__Intercept, .width = 0.95)
+bs.sig.yr<-round(yr_sigma_bs[1],2)
+bs.sig.yr.l<-round(yr_sigma_bs[2],2)
+bs.sig.yr.h<-round(yr_sigma_bs[3],2)
+
+pop_sigma_bs <- sigma_draws_bs %>%
+  mean_hdi(sd_site__Intercept, .width = 0.95)
+bs.sig.pop<-round(pop_sigma_bs[1],2)
+bs.sig.pop.l<-round(pop_sigma_bs[2],2)
+bs.sig.pop.h<-round(pop_sigma_bs[3],2)
+
+#bs.sig.yr<-round(summary(mod.bs)[17]$random$year[1],2)
+#bs.sig.yr.l<-round(summary(mod.bs)[17]$random$year[3],2)
+#bs.sig.yr.h<-round(summary(mod.bs)[17]$random$year[4],2)
+
+#bs.sig.pop<-round(summary(mod.bs)[17]$random$site[1],2)
+#bs.sig.pop.l<-round(summary(mod.bs)[17]$random$site[3],2)
+#bs.sig.pop.h<-round(summary(mod.bs)[17]$random$site[4],2)
+
+sigma_draws_gs <- tidy_draws(mod.pgs, variables = "sigma")
+
+spp_sigma_gs <- sigma_draws_gs %>%
+  mean_hdi(sd_spp__Intercept, .width = 0.95)
+gs.sig.sp<-round(spp_sigma_gs[1],2)
+gs.sig.sp.l<-round(spp_sigma_gs[2],2)
+gs.sig.sp.h<-round(spp_sigma_gs[3],2)
+
+
+yr_sigma_gs <- sigma_draws_gs %>%
+  mean_hdi(sd_year__Intercept, .width = 0.95)
+gs.sig.yr<-round(yr_sigma_gs[1],2)
+gs.sig.yr.l<-round(yr_sigma_gs[2],2)
+gs.sig.yr.h<-round(yr_sigma_gs[3],2)
+
+pop_sigma_gs <- sigma_draws_gs %>%
+  mean_hdi(sd_site__Intercept, .width = 0.95)
+gs.sig.pop<-round(pop_sigma_gs[1,1],2)
+gs.sig.pop.l<-round(pop_sigma_gs[1,2],2)
+gs.sig.pop.h<-round(pop_sigma_gs[1,3],2)
+
+
+#gs.sig.sp<-round(summary(mod.pgs)[17]$random$spp[1],2)
+#gs.sig.sp.l<-round(summary(mod.pgs)[17]$random$spp[3],2)
+#gs.sig.sp.h<-round(summary(mod.pgs)[17]$random$spp[4],2)
+
+
+#gs.sig.yr<-round(summary(mod.pgs)[17]$random$year[1],2)
+#gs.sig.yr.l<-round(summary(mod.pgs)[17]$random$year[3],2)
+#gs.sig.yr.h<-round(summary(mod.pgs)[17]$random$year[4],2)
+
+#gs.sig.pop<-round(summary(mod.pgs)[17]$random$site[1],2)
+#gs.sig.pop.l<-round(summary(mod.pgs)[17]$random$site[3],2)
+#gs.sig.pop.h<-round(summary(mod.pgs)[17]$random$site[4],2)
 @
+
 
 
 \section{Introduction}
@@ -116,18 +178,18 @@ We address this using rarely available plant-scale data---phenological observati
 %emw2024Sep19 -- I liked your questions, I might group answering them in the results (and since people are confused about variance -- keep all that in ONE paragraph and simplify and clarify the answers to your questions ... this would be way easier with a combined results and discussion). 
 %dl2024Sept20 I agree, if our question is which phase has the stronger influence then discussing them together might help make this comparison
 
-We found an apparently fundamental---and unexpected trade-off---between early, longer growing seasons and the thermal growing season. In our common garden, earlier leafout led to earlier budset (Pearson's correlation coefficient of \Sexpr{corrr} $CI_{95}$[\Sexpr{corrr.low}, \Sexpr{corrr.high}]) with  implications for the total length of the growing season. Measured in calendar days, the growing season remained consistent over the three year study period (Figure \ref{fig:vapar}c), despite substantial difference among years for leafout and budset. However, we found that a generally later leafout resulted in a longer thermal, or meteorological, growing season, defined here as the period of favorable meteorological conditions for plant growth \citep{Korner2023} (Figure \ref{fig:thermcal}c). 
+We found an apparently fundamental---and unexpected trade-off---between early, longer calender growing seasons and the thermal growing season. In our common garden, earlier leafout led to earlier budset (Pearson's correlation coefficient of \Sexpr{corrr} $CI_{95}$[\Sexpr{corrr.low}, \Sexpr{corrr.high}]) with  implications for the total length of the growing season. Measured in calendar days, the growing season remained consistent over the three year study period (Figure \ref{fig:vapar}c), despite substantial difference among years for leafout and budset. However, we found that a generally later leafout resulted in a longer thermal, or meteorological, growing season, defined here as the period of favorable meteorological conditions for plant growth \citep{Korner2023} (Figure \ref{fig:thermcal}c). 
 
 These contrasting results---of a relatively stable growing season measured in calendar days, but one that is `shorter' in thermal time with earlier leafout---may explain some of the contrasting results of how climate change affects end-of-season events and productivity \citep{Zani2020}. Our results show that earlier leafout may have little effect on the thermal growing season because of unfavorably low temperatures combined with the observed correlation between leafout and budset (Fig: \ref{fig:concept}a,\ref{fig:vapar}). Given that photosynthesis is temperature limited, earlier springs appear to provide limited opportunity for substantial growth yet may deprive plants of fully using late-season warmth. This may explain why multiple studies have failed to find correlations between longer seasons and increased plant growth \citep{cufar2015variations,camarero2022decoupled,dow2022warm,silvestro2023longer}. % cites from noeviany in whathappened.R in grephon repo
 %The thermal growth season is likely a better proxy for carbon gain. Even with very weak carry-over effects between SoS and EoS, phenological advances that drive SoS into less favorable conditions for carbon assimilation in the early spring, trade more carbon gain in mid season for reduced gain in early. 
 % The dynamics may help to explain why phenology advances with climate change have not clearly translated into higher levels of primary productive \citep{}. 
 
-This relationship was strongly species-dependent. with later leafout leading to longer thermal seasons most apparent in species that typically leaf out earlier in the spring relative to others. This included shrubs such as \emph{Sambucus racemosa}, \emph{Viburnum cassiodes}, \emph{Spirea alba}, \emph{Diervella lonicera}, \emph{Aronia melanocarpa} \emph{Spirea tomentosa} and the tree species \emph{Betula populifolia}. Later-leafout species showed a weaker relationshio )(\emph{Betula papyrifera}, \emph{Betula allegheniensis} and \emph{Alnus incana}, Figure \ref{fig:thermcal}d). 
+This relationship was strongly species-dependent. with later leafout leading to longer thermal seasons most apparent in species that typically leaf out earlier in the spring relative to others. This included shrubs such as \emph{Sambucus racemosa}, \emph{Viburnum cassiodes}, \emph{Spirea alba}, \emph{Diervella lonicera}, \emph{Aronia melanocarpa} \emph{Spirea tomentosa} and the tree species \emph{Betula populifolia}. Later-leafout species showed a weaker relationship )(\emph{Betula papyrifera}, \emph{Betula allegheniensis} and \emph{Alnus incana}, Figure \ref{fig:thermcal}d). 
 %cjc2024Sept25: I feel curious about upper temperature thresholds and what may be considered "too hot" for some species' productivity. Based on anecdotal evidence from Tree Spotters and these common garden observations, I remember some individuals dropping leaves in late summer before bud set because of drought-like conditions. I don't know if we can always assume that higher temperatures necessarily correlate to higher productivity - I'm thinking about assimilation curves and how they hit a peak at certain temperatures but begin to drop again with higher temps. 
 
-We can see these dynamics play out by tracking the phenology of four individuals plants and an example. The earlier individual of \emph{Aronia melanocarpa} depicted in Figure \ref{fig:concept}a, starts growing 24 days before a later individual, but only ceases 13 days before it (i.e., it has a 14 day longer calendar growing season). However, because the 24 day growth advantage it has occurs when thermal conditions are less favorable, it ends up having a shorter thermal growing season (i.e., less change for carbon assimilation) than its later conspecific (Figure \ref{fig:concept}b). This is not the case for the later leafing species \emph{Myrica gale} where the both the earlier and later leafing individual start growing under more optimal thermal conditions, so the 20 day ``head start" the earlier individual incurs results in a both a longer calendar and thermal growing season (Figure \ref{fig:concept}a,c). 
+We can see these dynamics play out by tracking the phenology of four individuals plants as an example. The earlier individual of \emph{Aronia melanocarpa} depicted in Figure \ref{fig:concept}a, starts growing 24 days before a later individual, but only ceases 13 days before it (i.e., it has a 14 day longer calendar growing season). However, because the 24 day growth advantage it has occurs when thermal conditions are less favorable, it ends up having a shorter thermal growing season (i.e., less change for carbon assimilation) than its later conspecific (Figure \ref{fig:concept}b). This is not the case for the later leafing species \emph{Myrica gale} where the both the earlier and later leafing individual start growing under more optimal thermal conditions, so the 20 day ``head start" the earlier individual incurs results in a both a longer calendar and thermal growing season (Figure \ref{fig:concept}a,c). 
 
-\emph{Variation in leafout and budset}\\
+\emph{Variation in leafout and budset}
 
 %emwDec15:  If we need it -- CITES here could be our NCC paper this year (Nacho 2024) and/or Deirdre's paper specifically estimates year to year variability, but I would be happy for less self-citing if we have other equally good refs
 Our common garden captured high variation in both leafout and budset, allowing us to examine how the two correlate, but also providing important insights into how both vary across species, populations and years. Consistent with a high number of studies finding species and year-to-year environmental variation drive leafout variation \citep{delpierre2024, donnelly2017, polgar2011}, we found high variance in leafout timing among species and years ($\sigma_{species}$:\Sexpr{sig.sp} $UI_{95}$[\Sexpr{sig.sp.l},\Sexpr{sig.sp.h}], $\sigma_{year}$:\Sexpr{sig.yr} $UI_{95}$[\Sexpr{sig.yr.l},\Sexpr{sig.yr.h}], Figure \ref{fig:vapar}a,b). Population level variation was low ($\sigma_{population}$:\Sexpr{sig.pop}, $UI_{95}$[\Sexpr{sig.pop.l},\Sexpr{sig.pop.h}], Figure \ref{fig:vapar}c). \emph{Sambucus racemosa} was typically the first species to leafout in the spring, leafing out approximately two weeks before \emph{Sorbus americana} the last species to leaf out (Figure \ref{fig:vapar}c). There were no differences in leafout timing among the four populations included in our study (Figure \ref{fig:vapar}c). Leafout was the earliest in 2019 and the latest in 2020 (Figure \ref{fig:vapar}c). %emwNov8: Add something to this paragraph that basically says: this jives with the whole climate change literature documenting big differences in spring and also with meta-analyses of common garden studies (Aitken and Bemmels, me and Zeng) that find leafout is not structured by population. 
@@ -140,7 +202,7 @@ These results are somewhat surprising as budset is commonly thought to be strong
 % OLD text: The phenological carry-over effects between leafout and budset that we observed was interesting in light of the fact that spring phenological phases are reported to be more plastic than autumn ones (is this still true?). Some of this might have to do with scale of measurement---macro-scale measurements like remote sensing may detect different things. Budset is the end of primary growth which we observed closely  .... The low levels of phenological variance between populations in our common garden provide little evidence for local adaptation in phenology. We found slightly stronger evidence for budset than leafout, which is consistent with the literature \citep{}. 
 
 %emwNov8: I did not update this paragraph much. 
-High variation across species in both their leafout and budset timing lead to species driving the most variation in  growing season length  ($\sigma_{species}$:\Sexpr{gs.sig.sp}, $UI_{95}$[\Sexpr{gs.sig.sp.l},\Sexpr{gs.sig.sp.h}], with less variation among years ($\sigma_{year}$:\Sexpr{gs.sig.yr}$UI_{95}$[\Sexpr{gs.sig.yr.l},\Sexpr{gs.sig.yr.h}], Figure \ref{fig:vapar}b) and little variation explained by population ($\sigma_{population}$:\Sexpr{gs.sig.pop}, $UI_{95}$[\Sexpr{gs.sig.pop.l},\Sexpr{gs.sig.pop.h}], Figure \ref{fig:vapar}c). Due to it's early leafout and late budset \emph{S.racemosa} had the longest calendar growing season of the species in our study. \emph{A. canadensis} and \emph{S. americana} had the shortest growing seasons, though for \emph{A. canadensis} this was due to early budset and for \emph{S. americana} late leafout (Figure \ref{fig:vapar}a). Population level differences in calendar growing season were determined by differences in budset, and followed the same pattern with Grant marginally earliest and white mountains  latest, with high uncertainty. (Figure \ref{fig:vapar}b). 
+High variation across species in both their leafout and budset timing lead to species driving the most variation in  growing season length  ($\sigma_{species}$:\Sexpr{gs.sig.sp}, $UI_{95}$[\Sexpr{gs.sig.sp.l},\Sexpr{gs.sig.sp.h}], with less variation among years ($\sigma_{year}$:\Sexpr{gs.sig.yr}, $UI_{95}$[\Sexpr{gs.sig.yr.l},\Sexpr{gs.sig.yr.h}], Figure \ref{fig:vapar}b) and little variation explained by population ($\sigma_{population}$:\Sexpr{gs.sig.pop}, $UI_{95}$[\Sexpr{gs.sig.pop.l},\Sexpr{gs.sig.pop.h}], Figure \ref{fig:vapar}c). Due to it's early leafout and late budset \emph{S.racemosa} had the longest calendar growing season of the species in our study. \emph{A. canadensis} and \emph{S. americana} had the shortest growing seasons, though for \emph{A. canadensis} this was due to early budset and for \emph{S. americana} late leafout (Figure \ref{fig:vapar}a). Population level differences in calendar growing season were determined by differences in budset, and followed the same pattern with Grant marginally earliest and white mountains  latest, with high uncertainty. (Figure \ref{fig:vapar}b). 
 
 
 \emph{Ecological and forecasting implications}\\
@@ -153,11 +215,12 @@ Our results show that there is little advantage from a carbon or primary product
 %emw2024Sep19 -- This seems a necessary paragraph but I would shorten the part about assembly to 1-2 sentences and make the paragraph more about BIOTIC consequences in general (these are generally ignored by many earth system models) by adding a sentence about the possibility of increase disease or pest damage with longer seasons.
 %emw2024Sep19 -- another hypothesis from my colleagues in Europe is that this is a NEW problem and maybe before early species were more like late species and early WAS still good. I think that might be worth mentioning. 
 %dl2024Sept20 We could sneak something about other traits here and set things up for a follow up paper on the traits we collected---maybe something to discuss further
-This result raises question about why some species leafout early during these unfavorable conditions, and why species tracking spring warming due to climate change have increased performance relative to non-trackers \citep{}. In this study we evaluated only the thermal conditions that may affect photosynthesis, rather than photosynthesis itself, which also depends strongly on light availability CITES. In forest systems, light availability is strongly dependent on canopy conditions, is highly dependent on biotic interactions. In our study, the species that leafed out the earliest are under story shrubs, for whom access to light becomes severely limited later in the growing season as canopy trees leaf out. It may be that for these species, the light availability early in the season necessitates leafing out in thermally bad conditions. In fact, some studies suggest that under story shrubs get all/most of their carbon before canopy closure \citep{AUGSPURGER2005}.
+This result raises question about why some species leafout early during these unfavorable conditions, and why species tracking spring warming due to climate change have increased performance relative to non-trackers \citep{}. In our study we only evaluated the thermal conditions that may affect photosynthesis, rather than photosynthesis itself, which also depends strongly on light availability. In forest systems, light availability is strongly dependent on canopy conditions, is highly dependent on biotic interactions. In our study, the species that leafed out the earliest are under story shrubs, for whom access to light becomes severely limited later in the growing season as canopy trees leaf out. It may be that for these species, the light availability early in the season necessitates leafing out in thermally bad conditions. In fact, some studies suggest that under story shrubs get all/most of their carbon before canopy closure \citep{AUGSPURGER2005}.
 
-Our results highlight that linking the phenological growing season to primary productivity requires accounting for phenological variation at multiple scales---from the individual to species levels. More efforts to understand and model species-level shifts in phenology appear especially necessary. While satellite observations can document intriguing trends \citep[e.g.,][]{Zohner2023,marques2023acclimation}, observations that include far more species at a finer scale are likely critical for mechanistic understanding. In particular our results suggest budset may be far more variable year to year than often suggested \citep{Michelson2018} but see (mckown2014, Vander2016). Recent work supports this, by highlighting an important role for temperature alongside photoperiod, in driving budset \citep{Olsen2014,Rhode2011}. Further, most work on budset in broadleaf species comes from one genus (Populus spp.) highlighting a critical gap, as a focus on single species may not always predict broad scale trends \citep{Morales-Castilla2024}. Budset is just one of many ways that plants senescence each year---generally at different times for different events \citep{Michelson2018}. 
-
-Understanding which metrics of end of season events correlate best with growth and carbon gain are well-established critical needs \citep{Korner2023}. Our results suggest we also need to study how these events shift with earlier and warmer years. Studies of leaf longevity and lifespan have examined this over large gradients \citep{reich2003,borchert2005phenology}, but there is surprisingly little work examining responses \citep{roleksyn2020fingerprint,en2021ethylene} and almost none across different metrics of end of season. Layering onto this the complexity of how species may balance leaf longevity versus building new leaves seems a critical gap in current research, but one that theory, models and global studies have routinely highlighted \citep{reich2003,fujita2012annual,kikuzawa2006toward}. Taken together, our results suggest a new research agenda for studies of growing season length with climate change that leverages satellite data for trends, but builds on new ground-level observational studies across species and time. 
+%emwNov8: Need to add that we have A LOT more information now from this study to guide future research ... (1) we need to be careful on what species we look at (so NDVI as Zohner uses, will schmeer across this and make understanding it mechanistically harder), (2) we need to figure out what mechanistically controls this [GOOD spot to introduce whether it might be leaf longeivity and also talk about budset vs. other late season events ... though it would be good if we can discuss budset and what it means vs. leaf coloring etc. earlier too]
+ This study shows linking phenological growing season to primary productivity requires account for phenological variation at multiple scales (individual, species level, multiple phases). These results suggest that progress will require more efforts to understand and model species-level shifts in phenology. While satellite observations can document intriguing trends \citep[e.g.,][]{Zohner2023}, observations that include far more species at a finer scale are likely critical for mechanistic understanding. In particular our results suggest budset may be far more variable year to year than often suggested \citep{Michelson2018} but see(mckown2014, Vander2016). Recent work supports this, by highlighting an important role for temperature alongside photoperiod, in driving budset \citep{Olsen2014,Rhode2011}. Further, most work on budset in broadleaf species comes from one genus (\emph{Populus spp.}) highlighting a critical gap, as a focus on single species may not always predict broad scale trends \citep{Morales-Castilla2024}. 
+ 
+Of course, budset is just one of many ways that plants senescence each year -- generally at different times for different events \citep{Michelson2018}. Understanding which metrics of end of season events correlate best with growth and carbon gain are well-established critical needs (I don't have a ref for this but am sure someone has said it). Our results suggest we also need to study how these events shift with earlier and warmer years. Studies of leaf longevity have begun to examine this, but more work across different metrics of end of season and across many more species is critical
  
  
 \section{Methods} %emwNov4 -- Skipping!
@@ -178,7 +241,7 @@ We define the thermal growing season as the cumulative growing degree day heat s
 
 All models were fit in the R package brms on 4 chains with a 4000 iteration warm-up and 1000 sampling iterations on each chain for a total of 4,000 sampling iterations across all chains. We evaluated model fit, with no divergent transitions, rhats less than 1.01 and high effective sample sizes. All analysis were done in R.
 
-
+\newpage
 \section{Figures} %emw2024Sep19 -- I really like the figures! But I think if you put the first one last you can introduce as a fundamentally new and important view of early seasons as calendar days versus thermal days that wraps up the whole paper. I might then make the last figure first -- big take-home shocking message given first in figures and text! Then break down the variance and data in the other figure. 
 %emwNov4 -- I moved first figure to third. 
 
@@ -203,6 +266,7 @@ All models were fit in the R package brms on 4 chains with a 4000 iteration warm
 
 %dl2024Sept20 can we add a legend defining the light and dark colors? I think the dark and light colors are switched in c.
 %dl2024Sept20 I really like a, and what we are trying to show in b and c, but could see how the scale of the x-axis lessens the point we are trying to make.  Could we add some sort of transparent polygon in the background to show the thermal growing season and illustrate that the growth is outside of this window in b but not in c?
+ \newpage
  \begin{figure}[h!]
     \centering
  \includegraphics[width=.8\textwidth]{..//analyses/figures/aronia_examp.jpeg}
@@ -210,8 +274,7 @@ All models were fit in the R package brms on 4 chains with a 4000 iteration warm
     \label{fig:concept}
 \end{figure}
 
-\bibliography{..//refs/wildhell.bib}
-
+\clearpage
 % cjc2024Sept25: maybe we consider including sample sizes across the populations?
 \begin{table}[ht]
 \centering
@@ -238,6 +301,13 @@ Species & functional group \\
   \emph{Viburnum cassinoides} &  shrub \\ 
   \end{tabular}
 \end{table}
+
+
+\newpage
+\bibliography{..//refs/wildhell.bib}
+
+
+
 
 \end{document}
 
